--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is Hongtai S."
-header-img: "img/post-about-me.jpg"
+header-img: "img/5.jpg"
 ---
 
 <!-- Chinese Version -->
